# template-cc-simple-server

./: .bazelrc  MODULE.bazel  README.md  WORKSPACE  buildbuddy.yaml
server/: BUILD.bazel  server.cc
